# geo-mapper

./: .env  .env.example  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  celery_worker.py  docker-compose-stress-test.yml  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: v1_init.py
app/: main.py
app/api/: router.py
app/api/endpoints/: distance.py  health.py  result.py
app/constant/: task_status_enum.py
app/managers/: file.py  geocoder.py
app/models/: __init__.py  geo_point.py  linked_distance.py  task.py
app/repositories/: result.py  task.py
app/schemas/: geo_point.py  linked_distance.py  task.py
app/services/: task.py
app/settings/: __init__.py  base.py  db.py  dev.py  local.py  test.py
app/utils/: errors.py  fastapi_app.py  logger.py
docker_builds/: Dockerfile
